--- a/01.05.24 React Bootstrap/vite-app/package.json
+++ b/01.05.24 React Bootstrap/vite-app/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-style",
+  "name": "vite-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,8 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.15",
+    "@mui/material": "^5.15.15",
+    "axios": "^1.6.8",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "sass": "^1.76.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
